# chronovm

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEMO.md  LANGUAGE.md  LICENSE  NIGHT_PLAN.md  PITCH.md  PROGRESS.md  README.md  build-web.sh
ci/: ci.yml
docs/: index.html
docs/pkg/: chronovm.js  chronovm_bg.wasm
examples/: README.md  array_max.cvm  array_sum.cvm  bubble_sort.cvm  buggy.cvm  collatz.cvm  countdown.cvm  factorial.cvm  fib.cvm  fib_memo.cvm  gcd.cvm  power.cvm  recursive.cvm  reverse_array.cvm  sieve.cvm  sum_to_n.cvm
src/: assembler.rs  isa.rs  lib.rs  main.rs  query.rs  tui.rs  vm.rs  wasm.rs
tests/: examples.rs
