[package]
name = "chronovm"
version = "0.1.0"
edition = "2021"
description = "A stack-based bytecode VM with a time-travel debugger — scrub execution backwards like a video."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chronovm"
path = "src/main.rs"
required-features = ["tui"]

[features]
default = ["tui"]
# The terminal debugger (native only).
tui = ["dep:ratatui", "dep:crossterm"]
# The browser build: expose the VM core to JavaScript via wasm-bindgen.
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]

[dependencies]
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
wasm-bindgen = { version = "=0.2.126", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[profile.release]
opt-level = 3
lto = true
